[package]
name = "riptide"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
argh = "0.1.13"
lexical = { version = "7.0.4", features = ["power-of-two"] }
memmap2 = "0.9.5"
mimalloc = "0.1.43"
monoio = { version = "0.2.4", features = ["tracing"] }
postcard = "1.1.1"
rancor = { version = "0.1.0", features = ["alloc"] }
rand = "0.8.5"
riptide-common = { version = "0.1.0", path = "common" }
rkyv = { version = "0.8.9", features = ["pointer_width_64"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
debug = true
opt-level = 3
lto = true
codegen-units = 1
strip = true

[workspace]
members = ["common", "process"]
